# FileScanner

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  README.txt
FileScanner-CLI/: CMakeLists.txt  main.cpp
FileScanner-DLL/: CMakeLists.txt  FileScanner.cpp  FileScanner.h  HashDataBase.cpp  HashDataBase.h  Logger.cpp  Logger.h  MD5.h  ThreadPool.cpp  ThreadPool.h
FileScanner-Test/: CMakeLists.txt  test_base.cpp  test_logger.cpp  test_scanner.cpp
